Make accent darker in dark mode, fix key bug

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 [data-theme="dark"] {
   --color-background: #111;
   --color-foreground: #eee;
-  --color-accent: #88ab97;
+  --color-accent: #567a66;
   --color-accent-foreground: white;
   --color-secondary: #1a1a1a;
   --color-secondary-foreground: #ccc;
